Добавлены рисунки в Example5

--- a/WpfBindingExample.csproj
+++ b/WpfBindingExample.csproj
@@ -6,4 +6,22 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Images\kamaz.jpg" />
+    <None Remove="Images\Lada-Priora.jpg" />
+    <None Remove="Images\lada_2105.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Images\kamaz.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\Lada-Priora.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\lada_2105.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
